--- a/src/main/webapp/app/account/settings/settings.html
+++ b/src/main/webapp/app/account/settings/settings.html
@@ -1,10 +1,10 @@
 <div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h2>User settings for [<b>{{vm.settingsAccount.login}}</b>]</h2>
+            <h2>Ustawienia konta</h2>
 
             <div class="alert alert-success" ng-show="vm.success">
-                <strong>Settings saved!</strong>
+                <strong>Ustawienia zostały zapisane!</strong>
             </div>
 
            <jhi-alert-error></jhi-alert-error>
@@ -12,68 +12,60 @@
             <form name="form" role="form" novalidate ng-submit="vm.save()" show-validation>
 
                 <div class="form-group">
-                    <label class="control-label" for="firstName">First Name</label>
-                    <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Your first name"
+                    <label class="control-label" for="firstName">Imię</label>
+                    <input type="text" class="form-control" id="firstName" name="firstName" placeholder="Twoje imię"
                            ng-model="vm.settingsAccount.firstName" ng-minlength=1 ng-maxlength=50 required maxlength="50">
                     <div ng-show="form.firstName.$dirty && form.firstName.$invalid">
-                        <p class="help-block"
-                               ng-show="form.firstName.$error.required">
-                            Your first name is required.
+                        <p class="help-block" ng-show="form.firstName.$error.required">
+                            Imię jest wymagane.
                         </p>
-                        <p class="help-block"
-                               ng-show="form.firstName.$error.minlength">
-                            Your first name is required to be at least 1 character.
+                        <p class="help-block" ng-show="form.firstName.$error.minlength">
+                            Imię musi mieć co najmniej 1 znak.
                         </p>
-                        <p class="help-block"
-                               ng-show="form.firstName.$error.maxlength">
-                            Your first name cannot be longer than 50 characters.
-                        </p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="lastName">Last Name</label>
-                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Your last name"
-                           ng-model="vm.settingsAccount.lastName" ng-minlength=1 ng-maxlength=50 required maxlength="50">
-                    <div ng-show="form.lastName.$dirty && form.lastName.$invalid">
-                        <p class="help-block"
-                               ng-show="form.lastName.$error.required">
-                            Your last name is required.
-                        </p>
-                        <p class="help-block"
-                               ng-show="form.lastName.$error.minlength">
-                            Your last name is required to be at least 1 character.
-                        </p>
-                        <p class="help-block"
-                               ng-show="form.lastName.$error.maxlength">
-                            Your last name cannot be longer than 50 characters.
-                        </p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label" for="email">E-mail</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="Your e-mail"
-                           ng-model="vm.settingsAccount.email" ng-minlength=5 ng-maxlength=100 required maxlength="100">
-                    <div ng-show="form.email.$dirty && form.email.$invalid">
-                        <p class="help-block"
-                               ng-show="form.email.$error.required">
-                            Your e-mail is required.
-                        </p>
-                        <p class="help-block"
-                               ng-show="form.email.$error.email">
-                            Your e-mail is invalid.
-                        </p>
-                        <p class="help-block"
-                               ng-show="form.email.$error.minlength">
-                            Your e-mail is required to be at least 5 characters.
-                        </p>
-                        <p class="help-block"
-                               ng-show="form.email.$error.maxlength">
-                            Your e-mail cannot be longer than 100 characters.
+                        <p class="help-block" ng-show="form.firstName.$error.maxlength">
+                            Imię musi mieć co najwyżej 50 znaków.
                         </p>
                     </div>
                 </div>
 
-                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Save</button>
+                <div class="form-group">
+                    <label class="control-label" for="lastName">Nazwisko</label>
+                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Twoje nazwisko"
+                           ng-model="vm.settingsAccount.lastName" ng-minlength=1 ng-maxlength=50 required maxlength="50">
+                    <div ng-show="form.lastName.$dirty && form.lastName.$invalid">
+                        <p class="help-block" ng-show="form.lastName.$error.required">
+                            Nazwisko jest wymagane.
+                        </p>
+                        <p class="help-block" ng-show="form.lastName.$error.minlength">
+                            Nazwisko musi mieć co najmniej 1 znak.
+                        </p>
+                        <p class="help-block" ng-show="form.lastName.$error.maxlength">
+                            Nazwisko musi mieć co najwyżej 50 znaków.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label" for="email">E-mail</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="Twój e-mail"
+                           ng-model="vm.settingsAccount.email" ng-minlength=5 ng-maxlength=100 required maxlength="100">
+                    <div ng-show="form.email.$dirty && form.email.$invalid">
+                        <p class="help-block" ng-show="form.email.$error.required">
+                            E-mail jest wymagany.
+                        </p>
+                        <p class="help-block" ng-show="form.email.$error.email">
+                            E-mail jest nieprawidłowy.
+                        </p>
+                        <p class="help-block" ng-show="form.email.$error.minlength">
+                            E-mail musi mieć co najmniej 5 znaków.
+                        </p>
+                        <p class="help-block" ng-show="form.email.$error.maxlength">
+                            E-mail musi mieć co najwyżej 100 znaków.
+                        </p>
+                    </div>
+                </div>
+
+                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary">Zapisz</button>
             </form>
         </div>
     </div>
